Add tests to check child_object images
* Remove unknown images
* Remove unknown child objects

Related-Prod: PRODX-3456
Change-Id: I8411a73db28b3b4015c5ecb660640bb15c7bc672

--- a/openstack_controller/templates/child_objects/block-storage.yaml
+++ b/openstack_controller/templates/child_objects/block-storage.yaml
@@ -197,7 +197,8 @@ cinder:
       connections:
         egress:
           - {{ to_child_object("coordination", "etcd", "StatefulSet", "etcd-etcd", ["client"]) | indent(12)}}
-      type: dynamic
+      # TODO(vsaienko): implement support of dynamic child objects for sts
+      # type: dynamic
 rabbitmq:
   Job:
     openstack-cinder-rabbitmq-cluster-wait:
