--- a/tests/fixtures/render_service_template/input/common_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/common_template_args.yaml
@@ -234,4 +234,7 @@ network_policies:
     coordination:etcd:StatefulSet:etcd-etcd:
       - from:
         - default: selector
+    compute:rabbitmq:StatefulSet:openstack-nova-rabbitmq-rabbitmq:
+      - from:
+        - default: selector
   egress: {}
